--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Build solution
         run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
 
+      - name: Install Web Development Build Tools
+        run: |
+          choco install visualstudio2022buildtools --params "--add Microsoft.VisualStudio.Component.WebBuildTools --quiet --norestart" -y
+        shell: powershell
+
       - name: Run MSTests
         run: dotnet test WebApplication.Tests\WebApplication.Tests.csproj --logger trx --results-directory TestResults
 
