--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,18 @@
+
 sonar.projectKey=nguyen365-build_sonarcloud_csharp_javascript
 sonar.organization=365nguyen
-#sonar.host.url=https://sonarcloud.io
-#sonar.sources=WebApp
-#sonar.tests=WebApp.Tests
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.host.url=https://sonarcloud.io
+
+# Source Directories
+sonar.sources=WebApplication,WebApplication/Scripts
+sonar.tests=WebApplication.Tests,WebApplication/Scripts/tests
+
+# C# Configuration
 sonar.cs.vstest.reportsPaths=**/TestResults/*.trx
+sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
+
+# JavaScript Configuration
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# Exclusions
+sonar.exclusions=**/node_modules/**,**/*.spec.js
