update sonar cloud exclusion

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Exclusions
-sonar.exclusions=**/node_modules/**,**/*.spec.js
+sonar.exclusions=**/node_modules/**
