--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.host.url=https://sonarcloud.io
 
 # Source Directories
 sonar.sources=WebApplication,WebApplication/Scripts
-sonar.tests=WebApplication.Tests,WebApplication/Scripts/tests
+sonar.tests=WebApplication.Tests,WebApplication/Tests
 
 # C# Configuration
 sonar.cs.vstest.reportsPaths=**/TestResults/*.trx
