--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.organization=365nguyen
 sonar.host.url=https://sonarcloud.io
 
 # Source Directories
-sonar.sources=WebApplication,WebApplication/Scripts
+sonar.sources=WebApplication
 sonar.tests=WebApplication.Tests,WebApplication/Tests
 
 # C# Configuration
