specify sources and tests for javascript files.

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ dist
 /WebApplication/obj/Debug
 /WebApplication.Tests/bin/Debug/net481
 /WebApplication.Tests/obj
+/WebApplication.Tests/bin/Release
