--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,8 @@ sonar.organization=365nguyen
 sonar.host.url=https://sonarcloud.io
 
 # Source Directories
-sonar.sources=WebApplication
-sonar.tests=WebApplication.Tests,WebApplication/Tests
+sonar.sources=WebApplication/Scripts
+sonar.tests=WebApplication/Tests
 
 # C# Configuration
 sonar.cs.vstest.reportsPaths=**/TestResults/*.trx
