--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,8 @@ jobs:
         run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
 
       # Install Coverlet Collector for Code Coverage
-      - name: Install Coverlet Collector
-        run: dotnet add WebApplication.Tests/WebApplication.Tests.csproj package coverlet.collector
+      #- name: Install Coverlet Collector
+      #  run: dotnet add WebApplication.Tests/WebApplication.Tests.csproj package coverlet.collector
 
       # Run MSTests with Coverlet to Generate OpenCover Coverage
       - name: Run MSTests & Generate Coverage
