--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,9 +56,9 @@ jobs:
         working-directory: WebApplication/Scripts
 
       # Run Jest Tests & Generate Coverage Report
-      - name: Run Jest tests
-        run: npm test -- --coverage
-        working-directory: WebApplication/Scripts
+      # - name: Run Jest tests
+      #   run: npm test -- --coverage
+      #   working-directory: WebApplication/Scripts
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
