--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.tests=WebApplication/Tests
 
 # C# Configuration
 sonar.cs.vstest.reportsPaths=**/TestResults/*.trx
-sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
+sonar.cs.opencover.reportsPaths=TestResults/coverage.opencover.xml
 
 # JavaScript Configuration
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
