--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.sources=WebApplication/Scripts
 sonar.tests=WebApplication/Tests
 
 # C# Configuration
-sonar.cs.vstest.reportsPaths=**/TestResults/*.trx
+sonar.cs.vstest.reportsPaths=TestResults/*.trx
 sonar.cs.opencover.reportsPaths=TestResults/coverage.opencover.xml
 
 # JavaScript Configuration
