--- a/WebApplication.Tests/WebApplication.Tests.csproj
+++ b/WebApplication.Tests/WebApplication.Tests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="MSTest" Version="3.6.4" />
     <PackageReference Include="OpenCover" Version="4.7.1221" />
+    <PackageReference Include="ReportGenerator" Version="5.4.4" />
   </ItemGroup>
 
   <ItemGroup>
