--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,26 +32,48 @@ jobs:
       - name: Build solution
         run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
 
-      - name: Test, and Analyze Code with Coverage
+      - name: Test and Analyze Code with Coverage
         shell: powershell
         run: |
-        
           $currentDirectory = Get-Location
           Write-Host "Current Directory: $currentDirectory"
-        
-          Get-ChildItem -Path $currentDirectory -Filter OpenCover.Console.exe -Recurse
-          Get-ChildItem -Path $currentDirectory -Filter ReportGenerator.exe -Recurse
-             
-          # Define paths to OpenCover and ReportGenerator executables, # Replace {version} with the actual version number or use a script to dynamically find it
-          $openCoverPath = ".\packages\OpenCover.4.7.1221\tools\OpenCover.Console.exe"
-          $reportGeneratorPath = ".\packages\ReportGenerator.5.4.4\tools\net47\ReportGenerator.exe"
-        
+
+          # Search for OpenCover and ReportGenerator executables
+          $openCoverPath = (Get-ChildItem -Path $currentDirectory -Filter OpenCover.Console.exe -Recurse | Select-Object -First 1).FullName
+          $reportGeneratorPath = (Get-ChildItem -Path $currentDirectory -Filter ReportGenerator.exe -Recurse | Select-Object -First 1).FullName
+
+          if (-not $openCoverPath) { Write-Host "OpenCover not found!"; exit 1 }
+          if (-not $reportGeneratorPath) { Write-Host "ReportGenerator not found!"; exit 1 }
+
+          Write-Host "OpenCover found at: $openCoverPath"
+          Write-Host "ReportGenerator found at: $reportGeneratorPath"
+
           # Run OpenCover
-          $openCoverPath -target:"vstest.console.exe" -targetargs:"WebApplication.Tests\bin\Release\WebApplication.Tests.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
-        
+          & $openCoverPath -target:"vstest.console.exe" -targetargs:"WebApplication.Tests\bin\Release\WebApplication.Tests.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
+
           # Convert coverage report with ReportGenerator
-          $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
-        
+          & $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
+
+      # - name: Test, and Analyze Code with Coverage
+      #   shell: powershell
+      #   run: |
+      #   
+      #     $currentDirectory = Get-Location
+      #     Write-Host "Current Directory: $currentDirectory"
+      #   
+      #     Get-ChildItem -Path $currentDirectory -Filter OpenCover.Console.exe -Recurse
+      #     Get-ChildItem -Path $currentDirectory -Filter ReportGenerator.exe -Recurse
+      #        
+      #     # Define paths to OpenCover and ReportGenerator executables, # Replace {version} with the actual version number or use a script to dynamically find it
+      #     $openCoverPath = ".\packages\OpenCover.4.7.1221\tools\OpenCover.Console.exe"
+      #     $reportGeneratorPath = ".\packages\ReportGenerator.5.4.4\tools\net47\ReportGenerator.exe"
+      #   
+      #     # Run OpenCover
+      #     $openCoverPath -target:"vstest.console.exe" -targetargs:"WebApplication.Tests\bin\Release\WebApplication.Tests.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
+      #   
+      #     # Convert coverage report with ReportGenerator
+      #     $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
+      #   
       # Run MSTests with Coverlet to Generate OpenCover Coverage
       # - name: Run MSTests & Generate Coverage
       #   run: |
