update build pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,30 +55,30 @@ jobs:
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
 
 
-      - name: Build solution
-        run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
-
-      - name: Test and Analyze Code with Coverage
-        shell: powershell
-        run: |
-          $currentDirectory = Get-Location
-          Write-Host "Current Directory: $currentDirectory"
-
-          # Search for OpenCover and ReportGenerator executables
-          $openCoverPath = Get-ChildItem -Path . -Recurse -Filter "OpenCover.Console.exe" -File | Select-Object -ExpandProperty FullName
-          $reportGeneratorPath = Get-ChildItem -Path . -Recurse -Filter "ReportGenerator.exe" -File | Where-Object { $_.FullName -match '\\net47\\' } | Select-Object -ExpandProperty FullName
-
-          if (-not $openCoverPath) { Write-Host "OpenCover not found!"; exit 1 }
-          if (-not $reportGeneratorPath) { Write-Host "ReportGenerator not found!"; exit 1 }
-
-          Write-Host "OpenCover found at: $openCoverPath"
-          Write-Host "ReportGenerator found at: $reportGeneratorPath"
-
-          # Run OpenCover
-          & $openCoverPath -target:"vstest.console.exe" -targetargs:"WebApplication.Test\bin\Release\WebApplication.Test.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
-
-          # Convert coverage report with ReportGenerator
-          & $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
+      #- name: Build solution
+      #  run: msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
+      #
+      #- name: Test and Analyze Code with Coverage
+      #  shell: powershell
+      #  run: |
+      #    $currentDirectory = Get-Location
+      #    Write-Host "Current Directory: $currentDirectory"
+      #
+      #    # Search for OpenCover and ReportGenerator executables
+      #    $openCoverPath = Get-ChildItem -Path . -Recurse -Filter "OpenCover.Console.exe" -File | Select-Object -ExpandProperty FullName
+      #    $reportGeneratorPath = Get-ChildItem -Path . -Recurse -Filter "ReportGenerator.exe" -File | Where-Object { $_.FullName -match '\\net47\\' } | Select-Object -ExpandProperty FullName
+      #
+      #    if (-not $openCoverPath) { Write-Host "OpenCover not found!"; exit 1 }
+      #    if (-not $reportGeneratorPath) { Write-Host "ReportGenerator not found!"; exit 1 }
+      #
+      #    Write-Host "OpenCover found at: $openCoverPath"
+      #    Write-Host "ReportGenerator found at: $reportGeneratorPath"
+      #
+      #    # Run OpenCover
+      #    & $openCoverPath -target:"vstest.console.exe" -targetargs:"WebApplication.Test\bin\Release\WebApplication.Test.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
+      #
+      #    # Convert coverage report with ReportGenerator
+      #    & $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
       
       - name: Debug Check Coverage Files
         run: ls -R TestResults
@@ -103,13 +103,20 @@ jobs:
           name: TestResults
           path: TestResults
 
+      - name: Upload Coverage Report to SonarCloud
+        run: |
+          sonar-scanner
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
       - name: Build, Test, and Analyze Code with Coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-      
+          msbuild SonarCloud.CSharp.JavaScript.sln /p:Configuration=Release
+
           $currentDirectory = Get-Location
           Write-Host "Current Directory: $currentDirectory"
       
@@ -117,8 +124,26 @@ jobs:
           Get-ChildItem -Path $currentDirectory -Filter ReportGenerator.exe -Recurse
               
           # SONAR BEGIN
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"nguyen365-build_sonarcloud_csharp_javascript" /o:"365nguyen" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml /d:sonar.javascript.lcov.reportPaths=coverage/lcov.info
       
+          $currentDirectory = Get-Location
+          Write-Host "Current Directory: $currentDirectory"
+
+          # Search for OpenCover and ReportGenerator executables
+          $openCoverPath = Get-ChildItem -Path . -Recurse -Filter "OpenCover.Console.exe" -File | Select-Object -ExpandProperty FullName
+          $reportGeneratorPath = Get-ChildItem -Path . -Recurse -Filter "ReportGenerator.exe" -File | Where-Object { $_.FullName -match '\\net47\\' } | Select-Object -ExpandProperty FullName
+
+          if (-not $openCoverPath) { Write-Host "OpenCover not found!"; exit 1 }
+          if (-not $reportGeneratorPath) { Write-Host "ReportGenerator not found!"; exit 1 }
+
+          Write-Host "OpenCover found at: $openCoverPath"
+          Write-Host "ReportGenerator found at: $reportGeneratorPath"
+
+          # Run OpenCover
+          & $openCoverPath -target:"vstest.console.exe" -targetargs:"WebApplication.Test\bin\Release\WebApplication.Test.dll" -register:user -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.opencover.xml
+
+          # Convert coverage report with ReportGenerator
+          & $reportGeneratorPath "-reports:coverage.opencover.xml" "-targetdir:TestResults" -reporttypes:Cobertura
       
           # SONAR BEGIN
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
@@ -131,8 +156,4 @@ jobs:
      #
       # Upload Both C# & JavaScript Coverage Reports to SonarCloud
 
-      - name: Upload Coverage Report to SonarCloud
-        run: |
-          sonar-scanner
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
